@@ -2,6 +2,7 @@ Version 1.1.2 (released ??-???-????)
 
   * add optional support for character encoding detection (issue #400)
   * fix username case handling in svnauthz module (issue #419)
+  * fix cvsdbadmin/svnadmin rebuild error on missing repos (issue #420)
 
 Version 1.1.1 (released 03-Jun-2009)
 
